--- a/src/200.html
+++ b/src/200.html
@@ -8,6 +8,6 @@
 
   <body>
     <div id="app"></div>
-    <script src="js/index.ts"></script>
+    <script src="js/index.tsx"></script>
   </body>
 </html>
